15-November-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json: Updated version to 3.3.1. (Shared Collection
 Management).

 * clarin-angular/src/app/app-routing.module.ts:
 * clarin-angular/src/app/app.module.ts:
 * clarin-angular/src/app/models/collection.ts:
 * clarin-angular/src/assets/data/menu.json:
 * clarin-angular/src/assets/i18n/el-GR.json:
 * clarin-angular/src/assets/i18n/en-US.json:
 * clarin-angular/src/css/clarin-material.scss: Added new tab for viewing
 shared Collection information.

 * api-client/api.py:
 * backend-django/DjangoClarin/urls.py:
 * backend-django/clarin_backend/models.py:
 * backend-django/clarin_backend/sql_views.py:
 * backend-django/clarin_backend/urls.py:
 * backend-django/clarin_backend/utils.py:
 * backend-django/clarin_backend/views.py: Added support for querying shared
 collection information ("api/shared").

29-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json: Updated version to 3.3.0. (Audio/Video
 Annotation).

 * clarin-angular/src/app/components/controls/button/annotation-button/annotation-button.component.ts:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.html:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/components/controls/wavesurfer-audio/wavesurfer-audio.component.html:
 * clarin-angular/src/app/components/controls/wavesurfer-audio/wavesurfer-audio.component.ts:
 * clarin-angular/src/app/components/controls/wavesurfer-video/wavesurfer-video.component.html:
 * clarin-angular/src/app/components/controls/wavesurfer-video/wavesurfer-video.component.ts:
 * clarin-angular/src/app/components/views/annotation/annotation.component.html:
 * clarin-angular/src/css/clarin-material.scss: Audio & Video Annotation
 implemented.

28-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>: