@@ -1,104 +1,105 @@
 <page-header title="{{'pageheader.Shared Collections'|translate}}"></page-header>
 <div class="content" [ngClass]="{'has-page-header': showPageHeader, 'no-page-header': !showPageHeader}">
-<mat-card>
-<mat-card-title>{{'dashboard.MyCollections' | translate}}</mat-card-title>
-<mat-card-subtitle>{{'dashboard.MyCollectionsInfo' | translate}}</mat-card-subtitle>
-<mat-card-content>
-<div class="table-scroll">
-<table mat-table [dataSource]="dataSource_shared_by_me" matSort>
-  <!-- Id -->
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'ID' | translate}}</th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-  </ng-container>
+  <as-split direction="vertical">
+    <as-split-area [size]="50" [minSize]="10" [maxSize]="90" class="top-wrapper">
+      <mat-card class="mat-card-fill-parent">
+        <mat-card-title>{{'dashboard.MyCollections' | translate}}</mat-card-title>
+        <mat-card-subtitle>{{'dashboard.MyCollectionsInfo' | translate}}</mat-card-subtitle>
+        <mat-card-content>
+          <div class="table-scroll">
+            <table mat-table [dataSource]="dataSource_shared_by_me" matSort>
+              <!-- Id -->
+              <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'ID' | translate}}</th>
+                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+              </ng-container>
 
-  <!-- Collection Name Column -->
-  <ng-container matColumnDef="collection_name">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'Name' | translate}}</th>
-    <td mat-cell *matCellDef="let element"> {{element.collection_name}} </td>
-  </ng-container>
+              <!-- Collection Name Column -->
+              <ng-container matColumnDef="collection_name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'Name' | translate}}</th>
+                <td mat-cell *matCellDef="let element"> {{element.collection_name}} </td>
+              </ng-container>
 
-  <!-- From Column -->
-  <ng-container matColumnDef="from_email">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'From' | translate}}</th>
-    <td mat-cell *matCellDef="let element"> {{element.from_email}} </td>
-  </ng-container>
+              <!-- From Column -->
+              <ng-container matColumnDef="from_email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'From' | translate}}</th>
+                <td mat-cell *matCellDef="let element"> {{element.from_email}} </td>
+              </ng-container>
 
-  <!-- To Column -->
-  <ng-container matColumnDef="to_email">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'To' | translate}}</th>
-    <td mat-cell *matCellDef="let element"> {{element.to_email}} </td>
-  </ng-container>
+              <!-- To Column -->
+              <ng-container matColumnDef="to_email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'To' | translate}}</th>
+                <td mat-cell *matCellDef="let element"> {{element.to_email}} </td>
+              </ng-container>
 
-  <!-- Confirmed Symbol Column -->
-  <ng-container matColumnDef="confirmed">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'Confirmed' | translate}}</th>
-    <td mat-cell *matCellDef="let element">
-      <mat-icon color="primary" *ngIf="element.confirmed">check_circle</mat-icon>
-      <mat-icon color="warn"    *ngIf="!element.confirmed">cancel</mat-icon>
-    </td>
-  </ng-container>
+              <!-- Confirmed Symbol Column -->
+              <ng-container matColumnDef="confirmed">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'Confirmed' | translate}}</th>
+                <td mat-cell *matCellDef="let element">
+                  <mat-icon color="primary" *ngIf="element.confirmed">check_circle</mat-icon>
+                  <mat-icon color="warn" *ngIf="!element.confirmed">cancel</mat-icon>
+                </td>
+              </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-</div>
-<mat-paginator [pageSizeOptions]="pageSizeOptions"
-               showFirstLastButtons 
-               aria-label="Select page of table">
-</mat-paginator>
-</mat-card-content>
-<mat-card-footer></mat-card-footer>
-</mat-card>
+              <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+          </div>
+          <mat-paginator [pageSizeOptions]="pageSizeOptions" showFirstLastButtons aria-label="Select page of table">
+          </mat-paginator>
+        </mat-card-content>
+        <mat-card-footer></mat-card-footer>
+      </mat-card>
+    </as-split-area>
+    <as-split-area [size]="50" [minSize]="10" [maxSize]="90" class="bottom-wrapper">
+      <mat-card class="mat-card-fill-parent">
+        <mat-card-title>{{'dashboard.MySharedCollections' | translate}}</mat-card-title>
+        <mat-card-subtitle>{{'dashboard.MySharedCollectionsInfo' | translate}}</mat-card-subtitle>
+        <mat-card-content>
+          <div class="table-scroll">
+            <table mat-table [dataSource]="dataSource_shared_with_me" matSort>
+              <!-- Id -->
+              <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'ID' | translate}}</th>
+                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+              </ng-container>
 
-<mat-card>
-<mat-card-title>{{'dashboard.MySharedCollections' | translate}}</mat-card-title>
-<mat-card-subtitle>{{'dashboard.MySharedCollectionsInfo' | translate}}</mat-card-subtitle>
-<mat-card-content>
-<div class="table-scroll">
-<table mat-table [dataSource]="dataSource_shared_with_me" matSort>
-  <!-- Id -->
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'ID' | translate}}</th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-  </ng-container>
+              <!-- Collection Name Column -->
+              <ng-container matColumnDef="collection_name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'Name' | translate}}</th>
+                <td mat-cell *matCellDef="let element"> {{element.collection_name}} </td>
+              </ng-container>
 
-  <!-- Collection Name Column -->
-  <ng-container matColumnDef="collection_name">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'Name' | translate}}</th>
-    <td mat-cell *matCellDef="let element"> {{element.collection_name}} </td>
-  </ng-container>
+              <!-- From Column -->
+              <ng-container matColumnDef="from_email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'From' | translate}}</th>
+                <td mat-cell *matCellDef="let element"> {{element.from_email}} </td>
+              </ng-container>
 
-  <!-- From Column -->
-  <ng-container matColumnDef="from_email">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'From' | translate}}</th>
-    <td mat-cell *matCellDef="let element"> {{element.from_email}} </td>
-  </ng-container>
+              <!-- To Column -->
+              <ng-container matColumnDef="to_email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'To' | translate}}</th>
+                <td mat-cell *matCellDef="let element"> {{element.to_email}} </td>
+              </ng-container>
 
-  <!-- To Column -->
-  <ng-container matColumnDef="to_email">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'To' | translate}}</th>
-    <td mat-cell *matCellDef="let element"> {{element.to_email}} </td>
-  </ng-container>
+              <!-- Confirmed Symbol Column -->
+              <ng-container matColumnDef="confirmed">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'Confirmed' | translate}}</th>
+                <td mat-cell *matCellDef="let element">
+                  <mat-icon color="primary" *ngIf="element.confirmed">check_circle</mat-icon>
+                  <mat-icon color="warn" *ngIf="!element.confirmed">cancel</mat-icon>
+                </td>
+              </ng-container>
 
-  <!-- Confirmed Symbol Column -->
-  <ng-container matColumnDef="confirmed">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'Confirmed' | translate}}</th>
-    <td mat-cell *matCellDef="let element">
-      <mat-icon color="primary" *ngIf="element.confirmed">check_circle</mat-icon>
-      <mat-icon color="warn"    *ngIf="!element.confirmed">cancel</mat-icon>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-</div>
-<mat-paginator [pageSizeOptions]="pageSizeOptions"
-               showFirstLastButtons 
-               aria-label="Select page of table">
-</mat-paginator>
-</mat-card-content>
-<mat-card-footer></mat-card-footer>
-</mat-card>
+              <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+          </div>
+          <mat-paginator [pageSizeOptions]="pageSizeOptions" showFirstLastButtons aria-label="Select page of table">
+          </mat-paginator>
+        </mat-card-content>
+        <mat-card-footer></mat-card-footer>
+      </mat-card>
+    </as-split-area>
+  </as-split>
 </div>
