@@ -778,24 +778,17 @@ text-widget {
  */
 manage-shared-collections {
   .content {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    align-content: stretch;
     .mat-card {
-      flex: 1 1 auto;
-      height: calc(50% - 16px);
-      display: flex !important;
-      flex-direction: column;
+      overflow: hidden;
+      margin: 8px;
+      height: calc(100% - 16px);
+      width:  calc(100% - 16px);
       .mat-card-content {
-        overflow: auto;
-        flex: 1 1 auto;
         display: flex !important;
         flex-direction: column;
         .table-scroll {
           overflow: auto;
           flex: 1 1 auto;
-
         }
       }
     }
