@@ -1,3 +1,8 @@
+16-November-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
+ * clarin-angular/src/app/components/views/shared-collections/shared-collections.component.html:
+ * clarin-angular/src/css/clarin-material.scss: Added a split pane to Shared Collection
+ Management.
+
 15-November-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
  * clarin-angular/package.json: Updated version to 3.3.1. (Shared Collection
  Management).
